# StudyMind

./: .gitignore  PROJECT_INTRO.md  PROJECT_OVERVIEW.md  README.md  StudyMind.sln
backend/: Cargo.toml
backend/src/: advice.rs  ai.rs  config.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs
frontend/StudyMind.App/: App.xaml  App.xaml.cs  CyberNoteSettings.cs  CyberNoteWindow.xaml  CyberNoteWindow.xaml.cs  FRONTEND_DOCUMENTATION.md  MainWindow.xaml  MainWindow.xaml.cs  StudyMind.App.csproj  TrayIconController.cs  app.manifest
frontend/StudyMind.App/Models/: ApiModels.cs
frontend/StudyMind.App/Properties/: launchSettings.json
frontend/StudyMind.App/Services/: LocalBackendService.cs  StudyMindApiClient.cs
frontend/StudyMind.App/ViewModels/: CyberNoteViewModel.cs  MainViewModel.cs
scripts/: package-release.ps1  seed-sample.ps1  start-backend.ps1
